# GVServer

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  allout.txt  example_notes.txt  quick_tips.txt  spec.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230324165008_create_pinpoints_table.sql  20230324171824_create_users_table.sql  20230324172017_create_contents_table.sql  20230324172207_create_user_pinpoints_table.sql  20230324172602_create_pinpoint_contents_table.sql  20230326230017_create_pinpoints_table.sql  20230401214133_make_status_not_null_in_subscriptions.sql  20230409211604_rename_password_column.sql  20230417011806_add_username_to_pinpoints.sql  20230904233334_create_user_roles_table.sql  20230916174934_initial_schema.sql  20231022170249_image_processing_changes.sql
notes/: basics.txt  pg_examples.txt  queries.txt  quick_tips.txt  sample_requests.txt  web_dev_example_notes.txt
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: auth_parameters.rs  auth_permissions.rs  auth_service.rs  auth_token.rs  credentials.rs  jwts.rs  middleware.rs  mod.rs  password.rs
src/database_direct_models/: db_user.rs  mod.rs
src/database_models/: db_pinpoint.rs  db_user.rs  mod.rs
src/domain/: app_user.rs  errors.rs  mod.rs  new_pinpoint.rs  pinpoint.rs  subscriber_email.rs  subscriber_name.rs  user.rs  user_email.rs  user_sign_up.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  (+3 more)
tests/: health_check.rs
(+49 files in other folders)
